# django-saml-demo

./: .gitignore  README.md  pyproject.toml
demo/: settings.py  urls.py  views.py
