[tool.poetry]
name = "django-saml-demo"
version = "0.1.0"
description = ""
authors = ["Lance Johnson <rlancejohnson@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
Django = "^4.0.1"
python3-saml = "^1.12.0"
django-sslserver = "^0.22"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
